# Artis_ContextMenu_Tools

./: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ContextMenuExt.cpp  ContextMenuExt.h  ContextMenuHandler.def  ContextMenuHandler.rc  Guids.h  README.md  Registerer.cpp  Registerer.h  dllmain.cpp  pch.h  resource.h
Tools/: ExtChanger.cpp  ExtChanger.h  FileHasher.cpp  FileHasher.h  PathCopier.cpp  PathCopier.h  SafeDeleter.cpp  SafeDeleter.h  UploadToTmpFiles.cpp  UploadToTmpFiles.h
